[package]
name = "traceforge-macros"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "TraceForge is a model checker for concurrent and distributed programs written in Rust"
repository = "https://github.com/awslabs/TraceForge"
keywords = ["model checking", "message passing", "thread", "async", "verification"]
categories = ["concurrency", "development-tools::testing"]


[lib]
proc-macro = true


[dependencies]

proc-macro2 = "1.0.54"
quote = "1.0.26"
syn = "2.0.11"
convert_case = "0.6"
